--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,30 @@
 html, body {
-    background: url('http://jonandlinda.com/lindaDesignPhotos/startPage/christmasmom2017-050.jpg') no-repeat fixed;
-    background-size: cover;
     margin: 0 auto;
     text-align: center;
   }
-  
-  h1 {
-    color: #e4e4e4;
-    padding: 1% 3%;
-    font-size: 38px;
-    font-family: 'Playfair Display';
-    text-shadow: -4px 3px 3px hsla(190, 9%, 15%, 1);
+
+  .quote {
+    width: 55%;
+    height: 90%;
+    float: left;
+    position: absolute;
+    top: -10px;
+    left: -35px;
+    z-index: -1;
   }
 
   .links {
-    background: rgba(210, 203, 214, 0.45);
+    background: rgba(80, 80, 80, 0.75);
     border-radius: 8px;
-    width: 95%;
-    height: 100%;
+    width: 50%;
+    height: 90%;
     margin: 0 auto;
-    margin-top: 5%;
+    margin-top: 2%;
+    margin-right: 2%;
+    float: right;
     display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    align-content: stretch;
+    justify-content: space-around;
+    z-index: 1;
   }
 
   .links h2 {
@@ -33,7 +34,7 @@ html, body {
   }
 
 .references, .classes {
-  width: 44%;
+  width: 30%;
   padding: 0 2% 3% 2%;
   display: flex;
   flex-direction: column;
@@ -41,7 +42,7 @@ html, body {
 }
 
 .hrdiv {
-  width: 75%;
+  width: 115%;
   margin-bottom: 2%;
 }
 
@@ -62,11 +63,14 @@ html, body {
   .links {
     flex-direction: column;
     align-items: center;
-    width: 80%;
   }
 
   .link {
-    font-size: 1.2em;
+    font-size: 1.3em;
+  }
+
+  .references, .classes {
+    width: 80%;
   }
 
   .hrdiv {
@@ -76,5 +80,38 @@ html, body {
   .vtdiv {
     position: absolute;
     visibility: hidden;
+    left: -999%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .quote {
+    position: relative;
+    width: 100%;
+    float: none;
+    top: 0;
+    left: 0;
+  }
+
+  .links {
+    width: 95%;
+    float: none;
+    margin-bottom: 3%;
+    margin-top: 3%;
+    margin-right: auto;
+  }
+
+  .link {
+    font-size: 1.2em;
+  }
+
+  .hrdiv {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1000px) and (max-width: 1300px) {
+  .links h2 {
+    font-size: 2.3em;
   }
 }
