--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,28 @@
+:root {
+  --purple: #B78FF2;
+  --green: #08E1BC;
+  --pink: #D56C99;
+  --white: #F6F6F6;
+  --black: #2e2e2e;
+}
+
 html {
   margin: 0;
+  padding: 0;
   font-size: 16px;
+  font-family: 'Acme', san-serif;
 }
 
 body {
   margin: 0;
   width: 100vw;
   height: 100vh;
-  overflow-x: hidden;
-  background: no-repeat center/cover url('./files/img/succulent.jpg');
-  background-color: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  background: no-repeat center/cover url('./files/img/succulent-opt.jpg');
 }
 
 .hello {
-  margin: 10% 0 0 0;
+  margin: 5% 0 0 0;
 }
 
 h1, h2 {
@@ -24,135 +33,130 @@ h1, h2 {
 
 #greeting {
   font-size: 10vw;
-  color: white;
+  color: var(--white);
 }
 
 #compliment {
   font-size: 4vw;
-  color: #aaa;
+  color: var(--white);
+  opacity: 0.6;
 }
 
+.links {
+  width: 90%;
+  height: 50%;
+  margin: 2% auto;
+  background-color: var(--black);
+  opacity: 0.8;
+  display: flex;
+  padding-bottom: 2%;
+  border-radius: 15px;
+}
 
+.title {
+  color: var(--white);
+  font-size: 2.6rem;
+  font-family: 'Cookie', cursive;
+  margin: 2% 15%;
+  padding-bottom: 2%;
+  border-bottom: 4px solid var(--pink);
+  text-align: center;
+}
 
+.references, .courses {
+  width: 50%;
+}
 
-
-  /* .quote {
-    width: 50%;
-    height: 90%;
-    float: right;
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    z-index: -1;
-    border: 2px solid #DEDEDE;
-  }
-
-  .links {
-    width: 50%;
-    margin: 0 auto;
-    margin-top: 2%;
-    margin-right: 2%;
-    float: left;
-    display: flex;
-    justify-content: space-around;
-    z-index: 1;
-  }
-
-  .links h2 {
-    color: #1f1f1f;
-    font-size: 2.5em;
-    margin-bottom: 2%;
-  }
-
-.references, .classes {
-  width: 30%;
-  padding: 0 2% 3% 2%;
+.sources {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.hrdiv {
-  width: 115%;
-  margin-bottom: 2%;
+  line-height: 1.7;
 }
 
 .link {
-  color: #14B1FF;
-  font-size: 1.4em;
-  font-family: 'Muli';
-  font-weight: 600;
+  color: var(--purple);
+  font-size: 1.5rem;
   text-decoration: none;
-  line-height: 1.75em;
 }
 
 .link:nth-child(even) {
-  color: #3CBE76;
+  color: var(--green);
 }
 
 .link:focus {
-  outline: 4px outset #DEDEDE;
-  outline-offset: 4px;
+  outline: 3.5px outset var(--green);
+  outline-offset: 5px;
+}
+
+.link:focus:nth-child(even) {
+  outline: 3.5px outset var(--purple);
 }
 
 .link:hover {
-  color: #DEDEDE;
-}
+  color: var(--white); 
+} 
 
 @media screen and (max-width: 600px) {
-  .links {
-    flex-direction: column;
-    align-items: center;
+  body {
+    overflow: hidden visible;
   }
 
-  .link {
-    font-size: 1.3em;
+  #greeting {
+    font-size: 12vw;
   }
 
-  .references, .classes {
-    width: 80%;
-  }
-
-  .hrdiv {
-    width: 150%;
-  }
-
-  .vtdiv {
-    position: absolute;
-    visibility: hidden;
-    left: -999%;
-  }
-}
-
-@media screen and (max-width: 1000px) {
-  .quote {
-    position: relative;
-    width: 100%;
-    float: none;
-    top: 0;
-    left: 0;
-    z-index: 1;
+  #compliment {
+    font-size: 6vw;
   }
 
   .links {
-    width: 95%;
-    float: none;
-    margin-bottom: 3%;
-    margin-top: 3%;
-    margin-right: auto;
+    margin-left: 3%;
   }
 
-  .link {
-    font-size: 1.2em;
+  .references, .courses {
+    width: 45%;
+    padding-left: 3%;
   }
 
-  .hrdiv {
-    width: 100%;
+  .sources {
+    align-items: flex-start;
+    padding-top: 4%;
+  }
+
+  .title {
+    text-align: left;
+    line-height: 1.45;
+    padding: 0;
+    margin: 2% 5% 0 0;
   }
 }
 
-@media screen and (min-width: 1000px) and (max-width: 1300px) {
-  .links h2 {
-    font-size: 2.3em;
+@media screen and (min-width: 1100px) {
+  .hello {
+    margin: 2% 0 0 0;
   }
-} */
+
+  #greeting {
+    font-size: 7vw;
+  }
+
+  #compliment {
+    font-size: 3vw;
+  }
+
+  .link {
+    font-size: 1.6rem;
+  }
+
+  .title {
+    font-size: 3.2rem;
+    margin: 1% 20%;
+  }
+
+  .links {
+    margin-top: 1%;
+    padding-bottom: 1%;
+    width: 75%;
+  }
+}
