--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,18 @@
 :root {
-  --purple: #B78FF2;
-  --green: #08E1BC;
-  --pink: #D56C99;
-  --white: #F6F6F6;
-  --black: #2e2e2e;
+  --yellow: #FFD37B;
+  --green: #7EBEBD;
+  --pink: #DD7C84;
+  --gray: #a7a0aa;
+  --black: #17171A;
+  --sanserif: 'Acme', san-serif;
+  --cursive: 'Engagement', script;
 }
 
 html {
   margin: 0;
   padding: 0;
   font-size: 16px;
-  font-family: 'Acme', san-serif;
+  font-family: var(--sanserif);
 }
 
 body {
@@ -18,51 +20,103 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  background: no-repeat center/cover url('./files/img/succulent-opt.jpg');
+  background: var(--black);
+  color: var(--gray);
+  /* background: no-repeat center/cover url('./files/img/succulent-opt.jpg'); */
 }
 
-.hello {
-  margin: 5% 0 0 0;
+main {
+  display: grid;
+  grid-template-areas: 
+    "greet greet greet"
+    "search search search"
+    "qa qa qa"
+    "design active tools"
+    "ref docs learn"
+    "comp comp comp";
+    place-items: center;
 }
 
-h1, h2 {
+h1, h2, h3 {
   margin: 0;
-  font-family: 'Engagement', script;
+  font-family: var(--cursive);
   text-align: center;
   font-weight: lighter;
 }
 
 #greeting {
   font-size: 10vw;
-  color: var(--white);
+  color: var(--gray);
+  grid-area: greet;
 }
 
 #compliment {
   font-size: 4vw;
-  color: var(--white);
-  opacity: 0.7;
+  color: var(--gray);
+  grid-area: comp;
+}
+
+.search-group {
+  width: 60%;
+  margin: 2% auto;
+  grid-area: search;
+  /* border: 1px solid red; */
+}
+
+#search-form {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+}
+
+.search-icon {
+  color: var(--gray);
+}
+
+#search {
+  flex-basis: 97%;
+  background: transparent;
+  outline: none;
+  border: none;
+  border-bottom: 3px solid var(--yellow);
+  padding: 0.75%;
+  color: var(--gray);
+  font-size: 1.05rem;
+}
+
+.quick-access {
+  width: 60%;
+  grid-area: qa;
+  display: flex;
+  justify-content: space-between;
+}
+
+.qa-link {
+  border: 2px solid var(--green);
+  width: 10%;
+  padding: 2%;
 }
 
 .links {
   width: 90%;
-  height: 50%;
+  /* height: 50%; */
   margin: 2% auto;
-  background-color: var(--black);
-  opacity: 0.8;
+  /* background-color: var(--black); */
+  /* opacity: 0.8; */
   display: flex;
   padding-bottom: 2%;
   border-radius: 15px;
 }
 
 .title {
-  color: var(--white);
+  color: var(--gray);
   font-size: 2.6rem;
-  font-family: 'Engagement', cursive;
+  /* font-family: var(--cursive); */
   font-weight: lighter;
   margin: 2% 15%;
   padding-bottom: 1%;
   border-bottom: 4px solid var(--pink);
-  text-align: center;
+  /* text-align: center; */
 }
 
 .references, .courses {
@@ -96,7 +150,7 @@ h1, h2 {
 }
 
 .link:hover {
-  color: var(--white); 
+  color: var(--gray); 
 } 
 
 .courses .link {
