--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ h1, h2, h3 {
   background-size: 100% 4px, 0 4px;
   background-position: 100% 100%, 0 100%;
   background-repeat: no-repeat;
-  transition: background-size 0.25s linear, background-position 0.25s linear, color 0.25s linear;
+  transition: background-size 0.4s ease-in-out, background-position 0.4s ease-in-out, color 0.4s ease-in-out;
 }
 
 .qa-link:hover, .qa-link:focus {
@@ -165,7 +165,7 @@ h1, h2, h3 {
   background-size: 100% 3px, 0 3px;
   background-position: 100% 100%, 0 100%;
   background-repeat: no-repeat;
-  transition: color 0.25s linear, background-size 0.25s linear, background-position 0.25s linear;
+  transition: color 0.4s ease-in-out, background-size 0.4s ease-in-out, background-position 0.4s ease-in-out;
 }
 
 .lg-link:hover, .lg-link:focus {
