--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@ html {
 
 body {
   margin: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
   color: var(--gray);
   /* background: var(--black); */
