--- a/styles.css
+++ b/styles.css
@@ -287,6 +287,8 @@ h1, h2, h3 {
 @media screen and (max-width: 800px) {
   body {
     overflow: visible;
+    width: 100%;
+    height: 100%;
   }
   
   main {
