added two new links; rearranged links for better aesthetic; adjusted styles to suit new sizes

--- a/styles.css
+++ b/styles.css
@@ -177,7 +177,7 @@ h1, h2, h3 {
 .lw-wide {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
   grid-auto-flow: column;
   width: 70%;
 }
@@ -418,6 +418,7 @@ h1, h2, h3 {
   }
 
   .lw-wide {
-    grid-template-columns: 1fr;
+    grid-template-columns: 0.75fr 1fr;
+    width: 100%;
   }
 }
