--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,7 @@ h1, h2, h3 {
   color: var(--gray);
   font-size: 2.8vw;
   margin-top: 0.5%;
+  text-decoration: double underline 1px;
 }
 
 .link-wrapper {
@@ -188,7 +189,7 @@ h1, h2, h3 {
 }
 
 .design .title {
-  text-decoration: wavy underline var(--pink);
+  text-decoration-color: var(--pink);
 }
 
 .design .lg-link {
@@ -205,7 +206,7 @@ h1, h2, h3 {
 }
 
 .reference .title {
-  text-decoration: wavy underline var(--green);
+  text-decoration-color: var(--green);
 }
 
 .reference .lg-link {
@@ -222,7 +223,7 @@ h1, h2, h3 {
 }
 
 .active-learning .title {
-  text-decoration: wavy underline var(--green);
+  text-decoration-color: var(--green);
 }
 
 .active-learning .lg-link {
@@ -239,7 +240,7 @@ h1, h2, h3 {
 }
 
 .learning .title {
-  text-decoration: wavy underline var(--yellow);
+  text-decoration-color: var(--yellow);
 }
 
 .learning .lg-link {
@@ -256,7 +257,7 @@ h1, h2, h3 {
 }
 
 .js-tools .title {
-  text-decoration: wavy underline var(--yellow);
+  text-decoration-color: var(--yellow);
 }
 
 .js-tools .lg-link {
@@ -273,7 +274,7 @@ h1, h2, h3 {
 }
 
 .docs .title {
-  text-decoration: wavy underline var(--pink);
+  text-decoration-color: var(--pink);
 }
 
 .docs .lg-link {
