--- a/work-styles.css
+++ b/work-styles.css
@@ -1,9 +1,9 @@
 :root {
-  --yellow: #f6c665;
-  --green: #9aaca7;
-  --pink: #f46663;
-  --gray: #f5f5f5;
-  --blue: #0a1930;
+  --purple: #b082a0;
+  --green: #618985;
+  --pink: #cb7c82;
+  --offwhite: #fdf7ec;
+  --brown: #231b17;
   --sanserif: "Signika Negative", san-serif;
   --cursive: "Kaushan Script", script;
 }
@@ -20,9 +20,8 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  color: var(--gray);
-  /* background: var(--black); */
-  background: no-repeat center/cover url("./files/img/succulent-opt.jpg");
+  color: var(--offwhite);
+  background: var(--brown);
 }
 
 h1,
@@ -36,4 +35,49 @@ h3 {
 
 p {
   text-align: center;
+}
+
+.greeting {
+  margin-top: 15px;
+}
+
+.search-group {
+  margin: 1% auto;
+  width: 60%;
+}
+
+#search-form {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.search-icon {
+  color: var(--offwhite);
+}
+
+#search {
+  width: 97%;
+  background: transparent;
+  outline: none;
+  border: none;
+  border-bottom: 2px solid var(--offwhite);
+  padding: 0.75%;
+  color: var(--offwhite);
+  font-size: 1.05rem;
+}
+
+.design1,
+.design2,
+.design3 {
+  width: 100%;
+  height: 35%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  opacity: 0.85;
+}
+
+.design1 {
+  z-index: 1;
 }
