--- a/work-styles.css
+++ b/work-styles.css
@@ -2,6 +2,7 @@
   --purple: #b082a0;
   --green: #618985;
   --pink: #cb7c82;
+  --yellow: #f6f679;
   --offwhite: #fdf7ec;
   --brown: #231b17;
   --sanserif: "Signika Negative", san-serif;
@@ -65,6 +66,102 @@ p {
   padding: 0.75%;
   color: var(--offwhite);
   font-size: 1.05rem;
+}
+
+.links {
+  padding: 3%;
+  z-index: 2;
+}
+
+.links ul {
+  list-style: none;
+  padding: 0;
+  display: grid;
+  grid-template-rows: repeat(3, 110px);
+  grid-template-columns: repeat(6, 110px);
+  grid-auto-columns: 110px;
+  place-items: center;
+  justify-content: center;
+  grid-auto-flow: column;
+  gap: 7px 14px;
+}
+
+.links-spacer {
+  grid-row: 1 / 2;
+  grid-column: 2 / span 5;
+  justify-self: stretch;
+  border-color: transparent;
+}
+
+.links li {
+  width: 100px;
+  height: 100px;
+  margin: 1%;
+  color: var(--green);
+  text-align: center;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 2px;
+  background-color: var(--brown);
+  transition: all 0.2s ease-in-out;
+}
+
+.links li a {
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: var(--offwhite);
+  width: 100%;
+  height: 100%;
+}
+
+.links li a:hover {
+  color: var(--brown);
+}
+
+.links li a p {
+  font-size: 1.75rem;
+  margin: 0;
+}
+
+.links li a span {
+  font-size: 0.6rem;
+  font-family: var(--cursive);
+  word-break: break-word;
+  padding: 0 4%;
+}
+
+.links-core {
+  border-color: var(--green);
+}
+
+.links-core:hover {
+  background-color: var(--green);
+}
+
+.links-ref {
+  border-color: var(--pink);
+}
+
+.links-ref:hover {
+  background-color: var(--pink);
+}
+
+.links-learn {
+  border-color: var(--purple);
+}
+
+.links-learn:hover {
+  background-color: var(--purple);
+}
+
+.links-tool {
+  border-color: var(--yellow);
+}
+
+.links-tool:hover {
+  background-color: var(--yellow);
 }
 
 .design1,
