--- a/work-styles.css
+++ b/work-styles.css
@@ -6,7 +6,7 @@
   --offwhite: #fdf7ec;
   --brown: #231b17;
   --sanserif: "Signika Negative", san-serif;
-  --cursive: "Kaushan Script", script;
+  --cursive: "Quando", script;
 }
 
 html {
@@ -44,7 +44,7 @@ p {
 
 .search-group {
   margin: 1% auto;
-  width: 60%;
+  width: 50%;
 }
 
 #search-form {
@@ -77,31 +77,31 @@ p {
   list-style: none;
   padding: 0;
   display: grid;
-  grid-template-rows: repeat(3, 110px);
-  grid-template-columns: repeat(6, 110px);
-  grid-auto-columns: 110px;
+  grid-template-rows: repeat(3, 120px);
+  grid-template-columns: repeat(6, 120px);
+  grid-auto-columns: 120px;
   place-items: center;
   justify-content: center;
   grid-auto-flow: column;
-  gap: 7px 14px;
+  gap: 14px;
 }
 
 .links-spacer {
-  grid-row: 1 / 2;
-  grid-column: 2 / span 5;
+  grid-row: 3;
+  grid-column: 3 / span 4;
   justify-self: stretch;
   border-color: transparent;
 }
 
 .links li {
-  width: 100px;
-  height: 100px;
+  width: 110px;
+  height: 110px;
   margin: 1%;
   color: var(--green);
   text-align: center;
-  border-radius: 5px;
+  border-radius: 7px;
   border-style: solid;
-  border-width: 2px;
+  border-width: 3px;
   background-color: var(--brown);
   transition: all 0.2s ease-in-out;
 }
@@ -110,7 +110,7 @@ p {
   text-decoration: none;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   color: var(--offwhite);
   width: 100%;
   height: 100%;
@@ -122,12 +122,12 @@ p {
 
 .links li a p {
   font-size: 1.75rem;
+  font-family: var(--cursive);
   margin: 0;
 }
 
 .links li a span {
   font-size: 0.6rem;
-  font-family: var(--cursive);
   word-break: break-word;
   padding: 0 4%;
 }
