--- a/work-styles.css
+++ b/work-styles.css
@@ -43,7 +43,7 @@ p {
 }
 
 .search-group {
-  margin: 1% auto;
+  margin: 3% auto 1%;
   width: 50%;
 }
 
@@ -168,7 +168,7 @@ p {
 .design2,
 .design3 {
   width: 100%;
-  height: 35%;
+  height: 30%;
   position: fixed;
   bottom: 0;
   left: 0;
